--- a/projetoagenda/src/views/index.ejs
+++ b/projetoagenda/src/views/index.ejs
@@ -1,37 +1,29 @@
 <%- include('includes/head') %>
-  <%- include('includes/nav') %>
+<%- include('includes/nav') %>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-2"></div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2"></div>
 
-        <div class="col-lg-8 my-3">
-          <h1 class="text-center">Agenda</h1>
-          <p class="text-center lead">Seus contatos estão abaixo</p>
-
-          <div class="row">
-            <div class="col my-3">
-              <div class="alert alert-danger">
-                Um erro qualquer
-              </div>
-            </div>
-          </div>
+    <div class="col-lg-8 my-3">
+      <h1 class="text-center">Agenda</h1>
+      <p class="text-center lead">Seus contatos estão abaixo</p>
 
       <div class="responsive-table">
         <table class="table my-3">
           <tr>
-            <td>Lucas</td>
-            <td>Martins</td>
-            <td>1122313221</td>
-            <td>lucasmartins@email.com</td>
+            <td>Luiz</td>
+            <td>Otávio</td>
+            <td>56632235656</td>
+            <td>otaviomiranda@gmail.com</td>
           </tr>
         </table>
       </div>
 
-        </div>
-
-        <div class="col-lg-2"></div>
-      </div>
     </div>
+    
+    <div class="col-lg-2"></div>
+  </div>
+</div>
 
-    <%- include('includes/footer') %>
+<%- include('includes/footer') %>
