--- a/projetoagenda/src/views/login.ejs
+++ b/projetoagenda/src/views/login.ejs
@@ -9,6 +9,8 @@
       <h1 class="text-center">Criar conta ou Entrar</h1>
       <p class="text-center lead">Faça login ou crie sua conta abaixo</p>
 
+      <%- include('includes/messages'); %>
+
       <div class="row">
 
         <div class="col-lg">
@@ -48,7 +50,7 @@
             <button type="submit" class="btn btn-primary">Entrar</button>
           </form>
 
-
+          
         </div>
 
       </div>
