--- a/projetoagenda/src/views/includes/nav.ejs
+++ b/projetoagenda/src/views/includes/nav.ejs
@@ -6,10 +6,20 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      
+
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="/contato/index">Cadastrar contato</a>
       </li>
+
+      <% if(user) { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login/logout">Sair</a>
+        </li>
+      <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login/index">Entrar</a>
+        </li>
+        <% } %>
 
     </ul>
   </div>
