LP: Gallery section

--- a/landing-page/assets/css/styles.css
+++ b/landing-page/assets/css/styles.css
@@ -68,3 +68,18 @@
   left: -2rem;
   transform: rotate(5deg);
 }
+
+.gallery-img {
+  width: 100%;
+  max-width: 36rem;
+  max-height: 36rem;
+  overflow: hidden;
+}
+
+.gallery-img img {
+  transition: all 300ms ease-in-out;
+}
+
+.gallery-img img:hover {
+  transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+}
